# flask_htmx_tailwind

./: .flaskenv  .gitignore  LICENSE  README.md  package-lock.json  package.json  postcss.config.js  pyproject.toml
src/flask_htmx_tailwind/: __init__.py  main.py  todo.py
src/flask_htmx_tailwind/templates/: base.html  google.html  index.html  todo.html
tests/: test_flask_htmx_tailwind.py
